k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: yukinoise-dev
  labels:
    name: yukinoise-dev
