k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: yukinoise-dev
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
