k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yukinoise-ingress
  namespace: yukinoise-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: yukinoise.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yukinoise-app
            port:
              number: 80
